<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bgcolor">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="450dp"
        android:layout_height="250dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="1.0"></ImageView>

    <ImageView
        android:layout_width="43dp"
        android:layout_height="49dp"
        android:src="@drawable/lg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"></ImageView>

    <TextView
        android:layout_width="137dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textSize="30dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="324dp"
        android:layout_height="54dp"
        android:text="@string/email"
        android:textColor="#BEC2C2"
        android:textSize="18dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388"></EditText>

    <EditText
        android:layout_width="324dp"
        android:layout_height="54dp"
        android:text="@string/password"
        android:textColor="#BEC2C2"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468"></EditText>

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/button"
        android:layout_width="321dp"
        android:layout_height="61dp"
        android:text="@string/signin"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textAllCaps="false"

        android:background="@drawable/button_set"



        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />

    <TextView
        android:layout_width="305dp"
        android:layout_height="25dp"
        android:text="@string/reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706"
        android:textColor="@color/white"
        android:textSize="20dp"

        ></TextView>

    <androidx.appcompat.widget.AppCompatButton


        android:layout_width="321dp"
        android:layout_height="61dp"
        android:background="@drawable/button_set"
        android:text="@string/profile"
        android:textAllCaps="false"
        android:textColor="@color/white"

        android:textSize="25dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />


</androidx.constraintlayout.widget.ConstraintLayout>