<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <ImageView
        android:layout_width="202dp"
        android:layout_height="202dp"

        android:src="@drawable/lg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236"
        ></ImageView>

    <TextView
        android:layout_width="241dp"
        android:layout_height="77dp"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/button"
        android:layout_width="321dp"
        android:layout_height="61dp"

        android:background="@drawable/button_set"
        android:text="@string/enterinacc"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835"

        />



    <TextView
        android:layout_width="305dp"
        android:layout_height="24dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:text="@string/register"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="15dp"
        >

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>